# arcana

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  go.work  go.work.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yaml  release.yaml  security.yaml
cmd/agui/: Dockerfile  go.mod  main.go
cmd/api/: Dockerfile  compliance.go  enterprise.go  enterprise_test.go  go.mod  go.sum  main.go  openai_compat.go  production_readiness_test.go  ratelimit.go  scim.go
cmd/audit/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/blueprint/: Dockerfile  engine_client.go  go.mod  handlers.go  main.go  store.go  types.go  yaml_parser.go
cmd/cache/: go.mod  main.go
cmd/channels/: go.mod  main.go  types.go  webhook.go
cmd/cli/: agent.go  api.go  audit.go  codex.go  compliance.go  cost.go  eval.go  go.mod  main.go  model.go  platform.go  skill.go
cmd/codex-ingestor/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/codex-router/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/codex-scorer/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/codex-searcher/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/engine/: Dockerfile  activities.go  activities_test.go  context_folding.go  go.mod  go.sum  handlers.go  handlers_test.go  learning.go  llm.go  main.go  mcts.go  proactive_retrieval.go  react.go  services.go  store.go  types.go  worker.go  workflow_types.go  workflows.go
cmd/finops/: Dockerfile  analytics.go  go.mod  handlers.go  main.go  store.go  types.go
cmd/gitops/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/graph/: go.mod  main.go
cmd/hands/: go.mod  main.go
cmd/hub/: go.mod  main.go
cmd/mesh/: Dockerfile  checkpoint.go  deepagent.go  go.mod  go.sum  handlers.go  handlers_test.go  k8s.go  k8s_test.go  main.go  main_test.go  monitor.go  playground.go  risk_detection.go  store.go  types.go
cmd/migrate/: go.mod  main.go
cmd/notify/: go.mod  main.go
cmd/operator/: Dockerfile  backup.go  go.mod  go.sum  main.go  main_test.go  tenant.go
cmd/optimizer/: go.mod  main.go
cmd/oracle/: Dockerfile  go.mod  handlers.go  main.go  predictor.go  store.go  types.go  world_model.go
cmd/registry/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/sandbox/: Dockerfile  go.mod  go.sum  handlers.go  k8s_executor.go  main.go  sandbox.go  store.go  types.go  wasm.go
cmd/scheduler/: Dockerfile  go.mod  handlers.go  main.go  store.go  types.go
cmd/tools/: Dockerfile  go.mod  go.sum  handlers.go  main.go  mcp.go  store.go  synthesis.go  types.go
cmd/wire/: go.mod  go.sum  main.go
deploy/: helmfile.yaml
deploy/backing/: alerting-rules.yaml  alertmanager.yaml  backup-verify.yaml  backup.yaml  cnpg-cluster.yaml  egress-policies.yaml  external-db.yaml  external-secrets.yaml  ingress.yaml  internal-ca.yaml  jaeger.yaml  minio.yaml  monitoring.yaml  namespace.yaml  nats.yaml  network-policies.yaml  pod-security.yaml  postgres.yaml  redis.yaml  sandbox-runtime.yaml  schema.sql  secrets.yaml  temporal.yaml  tls.yaml
deploy/compose/: docker-compose.yaml  init-db.sql
deploy/crds/: arcana-agent.yaml  arcana-backup-policy.yaml  arcana-blueprint.yaml  arcana-budget.yaml  arcana-codex.yaml  arcana-connector.yaml  arcana-dataset.yaml  arcana-eval-suite.yaml  arcana-experiment.yaml  arcana-guardrail.yaml  arcana-model.yaml  arcana-platform.yaml  arcana-promotion.yaml  arcana-role.yaml  arcana-skill-registry.yaml  arcana-tenant.yaml
deploy/kind/: cluster.yaml
deploy/tests/: smoke-test-job.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: architecture.md  deployment.md  development.md  getting-started.md  openapi.yaml  sandbox-security.md  secrets-management.md  tls-setup.md  troubleshooting.md
docs/adr/: 001-shared-server-package.md
docs/runbooks/: disaster-recovery.md  service-unhealthy.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: base.ts
e2e/tests/: agent-chat-memory.spec.ts  agent-detail-ui.spec.ts  api.spec.ts  chat-agent-flow.spec.ts  enterprise.spec.ts  guardrails.spec.ts  login.spec.ts  memory-api.spec.ts  ui-pages.spec.ts
examples/: budget-and-eval.yaml  code-review-agent.yaml  multi-agent-team.yaml  rag-pipeline.yaml
hack/: new-branch.sh  setup-registry.sh
pkg/a2a/: client.go  doc.go  go.mod  types.go
pkg/acp/: doc.go  go.mod  registry.go  types.go
pkg/agui/: doc.go  go.mod  types.go  types_test.go
pkg/common/: go.mod  health.go  health_test.go
pkg/crds/: doc.go  go.mod
pkg/db/: db.go  db_test.go  go.mod  migrate.go
pkg/logger/: go.mod  logger.go
pkg/mcp/: doc.go  go.mod  types.go
pkg/metrics/: go.mod  metrics.go
pkg/security/: go.mod  manifest.go  taint.go  taint_test.go  vault.go
pkg/server/: go.mod  go.sum  helpers.go  server.go  server_test.go
pkg/temporal/: activities.go  activities_test.go  doc.go  go.mod  go.sum  worker.go  workflows.go  workflows_test.go
pkg/tracing/: go.mod  llm.go  tracing.go
pkg/ward/: doc.go  go.mod  types.go  types_test.go
sdk/integration-adapter/: adapter.py
sdk/python/: pyproject.toml
sdk/python/arcana/: __init__.py  agents.py  client.py  cost.py  eval.py  models.py  skills.py
services/_shared/: auth.py  (+1 more)
services/annotate/: Dockerfile  pyproject.toml
services/annotate/app/: main.py
services/annotate/tests/: test_main.py
services/connectors/: Dockerfile  pyproject.toml
services/connectors/app/: main.py
services/connectors/tests/: test_main.py
services/memory/: Dockerfile  pyproject.toml
services/memory/app/: main.py
services/memory/tests/: test_main.py
services/skills/: Dockerfile  pyproject.toml
services/skills/app/: main.py
services/skills/tests/: test_main.py
services/ward/: Dockerfile  pyproject.toml
services/ward/app/: main.py
services/ward/tests/: test_main.py
test/: smoke-test.sh
(+361 files in other folders)
