[project]
name = "arcana-sdk"
version = "0.1.0"
description = "Python SDK for the Arcana AI Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "httpx~=0.28.0",
    "pydantic~=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arcana*"]
