[project]
name = "arcana-annotate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "pydantic>=2.10"]
[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]
[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["app*"]
